[B] Fix vertical alignment of mobile header caret
Fixes #1414

--- a/client/src/theme/Components/global/_nested-nav.scss
+++ b/client/src/theme/Components/global/_nested-nav.scss
@@ -41,9 +41,13 @@
         color: $neutral75;
       }
       position: relative;
-      top: 5px;
+      top: -2px;
       margin: 0 10px;
-      font-size: 12px;
+      font-size: 13px;
+
+      &::before {
+        vertical-align: middle;
+      }
     }
   }
 
